New dependencies for Tyrus/Grizzly (not working)