@@ -25,9 +25,27 @@ repositories {
 dependencies {
 
     // Webserver Dependencies
-    implementation("jakarta.websocket:jakarta.websocket-api:2.1.1")
-    implementation("org.glassfish.tyrus:tyrus-server:2.1.4")
-    implementation("org.glassfish.tyrus:tyrus-container-grizzly-server:2.1.4")
+    // https://mvnrepository.com/artifact/jakarta.websocket/jakarta.websocket-api
+    compileOnly("jakarta.websocket:jakarta.websocket-api:2.2.0-M1")
+    // https://mvnrepository.com/artifact/jakarta.xml.bind/jakarta.xml.bind-api
+    implementation("jakarta.xml.bind:jakarta.xml.bind-api:4.0.1")
+    // https://mvnrepository.com/artifact/jakarta.websocket/jakarta.websocket-client-api
+    compileOnly("jakarta.websocket:jakarta.websocket-client-api:2.2.0-M1")
+    // https://mvnrepository.com/artifact/jakarta.activation/jakarta.activation-api
+    implementation("jakarta.activation:jakarta.activation-api:2.1.2")
+    // https://mvnrepository.com/artifact/org.glassfish.tyrus/tyrus-client
+    implementation("org.glassfish.tyrus:tyrus-client:2.2.0-M1")
+    // https://mvnrepository.com/artifact/org.glassfish.tyrus/tyrus-server
+    implementation("org.glassfish.tyrus:tyrus-server:2.2.0-M1")
+    // https://mvnrepository.com/artifact/org.glassfish.tyrus/tyrus-container-grizzly-client
+    implementation("org.glassfish.tyrus:tyrus-container-grizzly-client:2.2.0-M1")
+    // https://mvnrepository.com/artifact/org.glassfish.grizzly/grizzly-framework
+    implementation("org.glassfish.grizzly:grizzly-framework:4.0.2")
+    // https://mvnrepository.com/artifact/org.glassfish.grizzly/grizzly-http-server
+    implementation("org.glassfish.grizzly:grizzly-http-server:4.0.2")
+    // https://mvnrepository.com/artifact/org.glassfish.tyrus/tyrus-container-grizzly-server
+    implementation("org.glassfish.tyrus:tyrus-container-grizzly-server:2.2.0-M1")
+
 
     // Testing Setup
     testImplementation("org.junit.jupiter:junit-jupiter-api:5.10.0")
@@ -112,6 +130,11 @@ tasks {
         systemProperty("jb.privacy.policy.text", "<!--999.999-->")
         systemProperty("jb.consents.confirmation.enabled", "false")
     }
+
+    runIde {
+        jvmArgs = listOf("--add-exports", "java.base/jdk.internal.vm=ALL-UNNAMED")
+    }
+
 
     signPlugin {
         certificateChain = environment("CERTIFICATE_CHAIN")
